--- a/index.html
+++ b/index.html
@@ -1,82 +1,94 @@
-html<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 
-<head></head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
-<link rel="stylesheet" href="style.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Siembra</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
 <body>
-    <header>
-        <!-- Hipervinculos -->
-        <div>
-            <a href="nosotrxs.html">Nosotrxs</a>
-            <a href="proyectos.html">Proyectos</a>
-            <a href="estudio.html">Estudio</a>
-            <a href="ayudamos.html">¿Cómo podemos ayudarte?</a>
+    <div class="container-fluid text-center">
+        <div class="row">
+            <div class="col-md-2 bg-primary">
+                <img src="" alt="logosiembra">
+            </div>
+            <div class="col-md-10 bg-dark">
+                <nav class="navbar navbar-expand-lg  ">
+                    <div class="container-fluid">
+                        <a class="navbar-brand menu" href="#">Siembra</a>
+                        <button class="navbar-toggler boton-menu" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link menu" aria-current="page" href="nosotrxs.html">Nosotrxs</a>
+                                </li>
+                                <li class="nav-item"></li>
+                                <a class="nav-link menu" aria-current="page" href="estudio.html">Estudio</a>
+                                </li>
+                                <li class="nav-item"></li>
+                                <a class="nav-link menu" aria-current="page" href="proyectos.html">Proyectos</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+
+            </div>
         </div>
-    </header>
-    <main>
-        <div>
+        <div class="row">
+            <div class="col-md-12 bg-warning">
+                <div id="carouselExample " class="carousel slide bg-info">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+
+            </div>
+            <div class="col-md-12 bg-secondary"> 
+                <p> Somos una casa productora de contenidos multimedia con más de 15 años de experiencia en la realización de proyectos audiovisuales que involucran la creatividad; trabajamos con los dos mejores lenguajes que contamos para comunicarnos: la imagen y el sonido. </p>
+
+
+            </div>
             
+            <div class="col-md">col-md</div>
         </div>
-
-
-
-
-
-
-
-
-
-        <div class="div1">
-            <h1>Sin Tipotgrafia Roboto</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellat eveniet veritatis quas labore
-                assumenda id pariatur necessitatibus exercitationem qui animi omnis officia soluta esse consequuntur
-                itaque vero, corporis ipsam.</p>
+        <div class="row">
+            <div class="col-md-12 bg-warning">col-md</div>
+            <div class="col-md">col-md</div>
+            <div class="col-md">col-md</div>
         </div>
-        <div class="div2">
-            <h1>Con tipografia roboto</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus tempora eius sapiente odit corrupti
-                suscipit ut sunt, ullam facere similique ratione veritatis a. Soluta qui tempora magnam? Assumenda,
-                vitae. Maxime?</p>
-        </div>
-        <div class="div3">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero officiis id nostrum tempora velit
-                voluptate. Aliquam qui dolor, tenetur magni ipsam reprehenderit ipsum illum omnis commodi! Nam ex
-                possimus numquam.</p>
-        </div>
-        <!-- Imagenes -->
-        <div>
-            <!-- Imagenes Directas -->
-            <img src="StadeFance.webp" width="500" height="2000" alt="Estadio de Francia" />
+    </div>
 
-            <!-- Imagenes desde una carpeta -->
-            <img src="imagenes/pikachu.jpg" width="500" height="4000" alt="Pikachu" />
-
-            <!-- Imagenes desde Internet -->
-            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
-                alt="Logo de Google" />
-        </div>
-        <!-- Práctica
-        - 2 Divs 
-        - En el primer div colocar links
-        - En el segundo div colocar una lista ol u ol.   
-    -->
-
-        <!-- Notas importante
-        - No se recomienda tener dentro de las etiqetas header, main, footer
-        a un div padre o que este lo contenga. 
-    -->
-    </main>
-    <footer>
-        <div id="div3">
-            <p>Información de la Empresa (Misión, Visión, etc)</p>
-        </div>
-        <div id="div4">
-            <p>Sección de Contacto</p>
-        </div>
-    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
