--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                                 <li class="nav-item"></li>
                                 <a class="nav-link menu" aria-current="page" href="proyectos.html">Proyectos</a>
                                 </li>
+                                <li class="nav-item"></li>
+                                <a class="nav-link menu" aria-current="page" href="ayudamos.html">Prensa</a>
+                                </li>
 
                             </ul>
                         </div>
@@ -45,38 +48,30 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12 bg-warning">
-                <div id="carouselExample " class="carousel slide bg-info">
+            <div class="col-md-12 bg-secondary">
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="..." class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
-                        </div>
+                      <div class="carousel-item active">
+                        <img src="Cuba.jpg" class="d-block w-100" alt="Cubano mirando al malecon">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="16x9_BYD_MG_1889.jpg" class="d-block w-100" alt="Interior auto byd">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="Imagen 9.jpg" class="d-block w-100" alt="Zacatecanos con texana">
+                      </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
+                  </div>
 
             </div>
-            <div class="col-md-12 bg-secondary"> 
-                <p> Somos una casa productora de contenidos multimedia con más de 15 años de experiencia en la realización de proyectos audiovisuales que involucran la creatividad; trabajamos con los dos mejores lenguajes que contamos para comunicarnos: la imagen y el sonido. </p>
+            <div class="col-md-12 bg-secondary">
+                <p> Somos una casa productora de contenidos multimedia con más de 15 años de experiencia en la
+                    realización de proyectos audiovisuales que involucran la creatividad; trabajamos con los dos mejores
+                    lenguajes que contamos para comunicarnos: la imagen y el sonido. </p>
 
 
             </div>
-            
+
             <div class="col-md">col-md</div>
         </div>
         <div class="row">
