--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container-fluid text-center">
         <div class="row">
             <div class="col-md-2 bg-primary">
-                <img src="" alt="logosiembra">
+                <img src="Siembra_Logo.jpg" alt="logosiembra">
             </div>
             <div class="col-md-10 bg-dark">
                 <nav class="navbar navbar-expand-lg  ">
