--- a/estudio.html
+++ b/estudio.html
@@ -1,20 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-     <!-- Hipervinculos -->
-     <div>
-        <a href="nosotrxs.html">Nosotrxs</a>
-        <a href="proyectos.html">Proyectos</a>
-        <a href="estudio/">Estudio</a>
-        <a href="teayudamos">¿Cómo podemos ayudarte?</a>
-    </div>
-    </header>
+    <title>Estudio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+</head>
+
+<body>
+    <div class="container-fluid text-center">
+        <div class="row">
+            <div class="col-md-2 bg-primary">
+                <img src="" alt="logosiembra">
+            </div>
+            <div class="col-md-10 bg-dark">
+                <nav class="navbar navbar-expand-lg  ">
+                    <div class="container-fluid">
+                        <a class="navbar-brand menu" href="#">Siembra</a>
+                        <button class="navbar-toggler boton-menu" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link menu" aria-current="page" href="nosotrxs.html">Nosotrxs</a>
+                                </li>
+                                <li class="nav-item"></li>
+                                <a class="nav-link menu" aria-current="page" href="estudio.html">Estudio</a>
+                                </li>
+                                <li class="nav-item"></li>
+                                <a class="nav-link menu" aria-current="page" href="proyectos.html">Proyectos</a>
+                                </li>
+                                <li class="nav-item"></li>
+                                <a class="nav-link menu" aria-current="page" href="ayudamos.html">Prensa</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+
+            </div>
+        </div>
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="address of your file" allowfullscreen></iframe>
+        </div>
 </body>
+
 </html>
