--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="container-fluid text-center">
         <div class="row">
             <div class="col-md-2 bg-primary">
-                <img src="Siembra_Logo.jpg" alt="logosiembra">
+                <img src="Siemr_Logo.jpg" alt="logosiembra">
             </div>
             <div class="col-md-10 bg-dark">
                 <nav class="navbar navbar-expand-lg  ">
                     <div class="container-fluid">
-                        <a class="navbar-brand menu" href="#">Siembra</a>
+                        <a class="navbar-brand menu" href="index.html">Siembra</a>
                         <button class="navbar-toggler boton-menu" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
