--- a/nosotrxs.html
+++ b/nosotrxs.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
+  <title>Nosotros</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 <body>
   <div class="container-fluid text-center">
+    <div class="row">
+        <div class="col-md-2 bg-primary">
+            <img src="" alt="logosiembra">
+        </div>
+  <div class="col-md-10 bg-dark">
+    <nav class="navbar navbar-expand-lg  ">
+      <div class="container-fluid">
+          <a class="navbar-brand menu" href="index.html">Siembra</a>
+          <button class="navbar-toggler boton-menu" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <a class="nav-link menu" aria-current="page" href="nosotrxs.html">Nosotrxs</a>
+                  </li>
+                  <li class="nav-item"></li>
+                  <a class="nav-link menu" aria-current="page" href="estudio.html">Estudio</a>
+                  </li>
+                  <li class="nav-item"></li>
+                  <a class="nav-link menu" aria-current="page" href="proyectos.html">Proyectos</a>
+                  </li>
+                  <li class="nav-item"></li>
+                  <a class="nav-link menu" aria-current="page" href="ayudamos.html">Prensa</a>
+                  </li>
 
-  
+              </ul>
+          </div>
+      </div>
+  </nav>
+
+  </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
