--- a/prensa.html
+++ b/prensa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,12 +14,12 @@
     <div class="container-fluid text-center">
         <div class="row">
             <div class="col-md-2 bg-primary">
-                <img src="" alt="logosiembra">
+                <img src= "Si" alt="logosiembra">
             </div>
             <div class="col-md-10 bg-dark">
                 <nav class="navbar navbar-expand-lg  ">
                     <div class="container-fluid">
-                        <a class="navbar-brand menu" href="#">Siembra</a>
+                        <a class="navbar-brand menu" href="index.html">Siembra</a>
                         <button class="navbar-toggler boton-menu" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -35,6 +35,9 @@
                                 </li>
                                 <li class="nav-item"></li>
                                 <a class="nav-link menu" aria-current="page" href="proyectos.html">Proyectos</a>
+                                </li>
+                                <li class="nav-item"></li>
+                                <a class="nav-link menu" aria-current="page" href="ayudamos.html">Prensa</a>
                                 </li>
 
                             </ul>
