--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="container-fluid text-center">
         <div class="row">
-            <div class="col-md-2 bg-primary">
-                <img src="Siemr_Logo.jpg" alt="logosiembra">
+            <div class="col-md-2 bg-dark">
+                <img src="Fotos/Siembra_Logo.jpg" alt="logosiembra" height="100px">
             </div>
             <div class="col-md-10 bg-dark">
                 <nav class="navbar navbar-expand-lg  ">
@@ -37,7 +37,7 @@
                                 <a class="nav-link menu" aria-current="page" href="proyectos.html">Proyectos</a>
                                 </li>
                                 <li class="nav-item"></li>
-                                <a class="nav-link menu" aria-current="page" href="ayudamos.html">Prensa</a>
+                                <a class="nav-link menu" aria-current="page" href="prensa.html">Prensa</a>
                                 </li>
 
                             </ul>
@@ -52,13 +52,13 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="Cuba.jpg" class="d-block w-100" alt="Cubano mirando al malecon">
+                        <img src="Fotos/Documental/Cuba.jpg" class="d-block w-100" alt="Cubano mirando al malecon">
                       </div>
                       <div class="carousel-item">
-                        <img src="16x9_BYD_MG_1889.jpg" class="d-block w-100" alt="Interior auto byd">
+                        <img src="Fotos/Automóviles/16x9_BYD_MG_1889.jpg" class="d-block w-100" alt="Interior auto byd">
                       </div>
                       <div class="carousel-item">
-                        <img src="Imagen 9.jpg" class="d-block w-100" alt="Zacatecanos con texana">
+                        <img src="Fotos/Documental/Imagen 9.jpg" class="d-block w-100" alt="Zacatecanos con texana">
                       </div>
                     </div>
                   </div>
