--- a/estudio.html
+++ b/estudio.html
@@ -14,11 +14,11 @@
 <body>
     <div class="container-fluid text-center">
         <div class="row">
-            <div class="col-md-2 bg-primary">
-                <img src="" alt="logosiembra">
+            <div class="col-md-2 bg-dark">
+                <img src="Fotos/Siembra_Logo.jpg" alt="logosiembra" height="100px" >
             </div>
             <div class="col-md-10 bg-dark">
-                <nav class="navbar navbar-expand-lg  ">
+                <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                         <a class="navbar-brand menu" href="#">Siembra</a>
                         <button class="navbar-toggler boton-menu" type="button" data-bs-toggle="collapse"
@@ -38,7 +38,7 @@
                                 <a class="nav-link menu" aria-current="page" href="proyectos.html">Proyectos</a>
                                 </li>
                                 <li class="nav-item"></li>
-                                <a class="nav-link menu" aria-current="page" href="ayudamos.html">Prensa</a>
+                                <a class="nav-link menu" aria-current="page" href="prensa.html">Prensa</a>
                                 </li>
 
                             </ul>
