--- a/proyectos.html
+++ b/proyectos.html
@@ -13,8 +13,8 @@
 <body>
     <div class="container-fluid text-center">
         <div class="row">
-            <div class="col-md-2 bg-primary">
-                <img src= "Si" alt="logosiembra">
+            <div class="col-md-2 bg-dark">
+                <img src= "Fotos/Siembra_Logo.jpg" alt="logosiembra" height="100px">
             </div>
             <div class="col-md-10 bg-dark">
                 <nav class="navbar navbar-expand-lg  ">
@@ -50,5 +50,14 @@
     <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="address of your file" allowfullscreen></iframe>
       </div>
+      <footer class="bg-primary">
+        <div class="col-md">
+    <p>Todos los Derechos Reservados © </p>
+    </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
