--- a/estudio.html
+++ b/estudio.html
@@ -49,8 +49,15 @@
             </div>
         </div>
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="address of your file" allowfullscreen></iframe>
+            
+            <iframe src="https://player.vimeo.com/video/810334231" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
         </div>
+        <footer class style="color:whitesmoke;">
+            <div class="col-md">
+        <p>Todos los Derechos Reservados © 
+        </p>
+        </div>
+        </footer>
 </body>
 
 </html>
