--- a/index.html
+++ b/index.html
@@ -51,35 +51,40 @@
             <div class="col-md-12 bg-secondary">
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="Fotos/Documental/Cuba.jpg" class="d-block w-100" alt="Cubano mirando al malecon">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="Fotos/Automóviles/16x9_BYD_MG_1889.jpg" class="d-block w-100" alt="Interior auto byd">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="Fotos/Documental/Imagen 9.jpg" class="d-block w-100" alt="Zacatecanos con texana">
-                      </div>
+                        <div class="carousel-item active">
+                            <img src="Fotos/Documental/Cuba.jpg" class="d-block w-100" alt="Cubano mirando al malecon">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="Fotos/Automóviles/16x9_BYD_MG_1889.jpg" class="d-block w-100"
+                                alt="Interior auto byd">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="Fotos/Documental/Imagen 9.jpg" class="d-block w-100" alt="Zacatecanos con texana">
+                        </div>
                     </div>
-                  </div>
+                </div>
 
             </div>
-            <div class="col-md-12 bg-secondary">
-                <p> Somos una casa productora de contenidos multimedia con más de 15 años de experiencia en la
-                    realización de proyectos audiovisuales que involucran la creatividad; trabajamos con los dos mejores
-                    lenguajes que contamos para comunicarnos: la imagen y el sonido. </p>
 
+        </div>
+            <div class parrafo ="col-md-12">
+                <h3 style="color: blanchedalmond;"> Somos una casa productora de contenidos multimedia con más de 15 años de experiencia en la
+                    realización de proyectos audiovisuales que involucran la creatividad; trabajamos con los dos mejores
+                    lenguajes que contamos para comunicarnos: la imagen y el sonido.
+                </h3>
 
             </div>
 
             <div class="col-md">col-md</div>
         </div>
         <div class="row">
-            <div class="col-md-12 bg-warning">col-md</div>
-            <div class="col-md">col-md</div>
-            <div class="col-md">col-md</div>
+            <div class="col-md-12 bg-warning"> Documental</div>
+            <div class="col-md">Retrato</div>
+            <div class="col-md">Producto</div>
         </div>
-    </div>
+
+
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
