--- a/prensa.html
+++ b/prensa.html
@@ -14,7 +14,7 @@
     <div class="container-fluid text-center">
         <div class="row">
             <div class="col-md-2 bg-dark">
-                <img src= "Fotos/Siembra_Logo.jpg" height 200px ="logosiembra" height="100px">
+                <img src= "Fotos/Siembra_Logo.jpg" alt="logosiembra" height="100px">
             </div>
             <div class="col-md-10 bg-dark">
                 <nav class="navbar navbar-expand-lg  ">
@@ -47,8 +47,15 @@
 
             </div>
         </div>
-    <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="address of your file" allowfullscreen></iframe>
-      </div>
+
+        <object data="PDF/KINGS AND COYOTES.pdf" type="application/pdf" width="800PX" height="800PX ">
+            <p>Alternative text - include a link <a href="PDF/KINGS AND COYOTES.pdf">to the PDF!</a></p>
+          </object>
+      <footer class style="color:whitesmoke;">
+        <div class="col-md">
+    <p>Todos los Derechos Reservados © 
+    </p>
+    </div>
+
 </body>
 </html>
