--- a/index.html
+++ b/index.html
@@ -72,18 +72,13 @@
                     realización de proyectos audiovisuales que involucran la creatividad; trabajamos con los dos mejores
                     lenguajes que contamos para comunicarnos: la imagen y el sonido.
                 </h3>
-
             </div>
-
-            <div class="col-md">col-md</div>
         </div>
-        <div class="row">
-            <div class="col-md-12 bg-warning"> Documental</div>
-            <div class="col-md">Retrato</div>
-            <div class="col-md">Producto</div>
+        <div class lista="row">
+            <div class="col-md-12"> Documental</div>
+            <div class="col-md-12">Retrato</div>
+            <div class="col-md-12">Producto</div>
         </div>
-
-
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
