--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                             <img src="Fotos/Documental/Cuba.jpg" class="d-block w-100" alt="Cubano mirando al malecon">
                         </div>
                         <div class="carousel-item">
-                            <img src="Fotos/Automóviles/16x9_BYD_MG_1889.jpg" class="d-block w-100"
-                                alt="Interior auto byd">
+                            <img src="Fotos/Documental/Imagen 9.jpg" class="d-block w-100" alt="Zacatecanos con texana">
                         </div>
                         <div class="carousel-item">
                             <img src="Fotos/Documental/Imagen 9.jpg" class="d-block w-100" alt="Zacatecanos con texana">
@@ -67,19 +66,20 @@
             </div>
 
         </div>
-            <div class parrafo ="col-md-12">
-                <h3 style="color: blanchedalmond;"> Somos una casa productora de contenidos multimedia con más de 15 años de experiencia en la
-                    realización de proyectos audiovisuales que involucran la creatividad; trabajamos con los dos mejores
-                    lenguajes que contamos para comunicarnos: la imagen y el sonido.
-                </h3>
-            </div>
+        <div class parrafo="col-md-12">
+            <h3 style="color: blanchedalmond;"> Somos una casa productora de contenidos multimedia con más de 15 años
+                de experiencia en la
+                realización de proyectos audiovisuales que involucran la creatividad; trabajamos con los dos mejores
+                lenguajes que contamos para comunicarnos: la imagen y el sonido.
+            </h3>
         </div>
-        <div class lista="row">
-            <div class="col-md-12"> Documental</div>
-            <div class="col-md-12">Retrato</div>
-            <div class="col-md-12">Producto</div>
-        </div>
-    
+    </div>
+    <div class lista="row">
+        <div class="col-md-12"> Documental</div>
+        <div class="col-md-12">Retrato</div>
+        <div class="col-md-12">Producto</div>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
