--- a/index.html
+++ b/index.html
@@ -44,18 +44,17 @@
                         </div>
                     </div>
                 </nav>
-
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12 bg-secondary">
+            <div class="col-md-12">
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="Fotos/Documental/Cuba.jpg" class="d-block w-100" alt="Cubano mirando al malecon">
                         </div>
                         <div class="carousel-item">
-                            <img src="Fotos/Documental/Imagen 9.jpg" class="d-block w-100" alt="Zacatecanos con texana">
+                            <img src="Fotos/Paisaje/DSC_1859.jpg" class="d-block w-100" alt="Zacatecanos con texana">
                         </div>
                         <div class="carousel-item">
                             <img src="Fotos/Documental/Imagen 9.jpg" class="d-block w-100" alt="Zacatecanos con texana">
