--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <img src="Fotos/Documental/Cuba.jpg" class="d-block w-100" alt="Cubano mirando al malecon">
                         </div>
                         <div class="carousel-item">
-                            <img src="Fotos/Paisaje/DSC_1859.jpg" class="d-block w-100" alt="Zacatecanos con texana">
+                            <img src="Fotos/Automóviles/16x9_BYD_MG_1889.jpg" class="d-block w-100" alt="Interior auto byd">
                         </div>
                         <div class="carousel-item">
                             <img src="Fotos/Documental/Imagen 9.jpg" class="d-block w-100" alt="Zacatecanos con texana">
